# iceth

./: Cargo.toml  LICENSE  README.md  dfx.json  iceth-API.md  iceth.did
.github/: pull_request_template.md
.github/workflows/: deny.yml  deny2.yml  rust.yml
scripts/: build
src/: main.rs
