[package]
name = "iceth"
version = "0.1.0"
description = "Ethereum on IC."
authors = ["John Plevyak <jplevyak@gmail.com>"]
readme = "README.md"
edition = "2021"

[dependencies]
candid = "0.8"
ic-cdk = "0.7"
ic-cdk-macros = "0.6"
url = "2.3"

[profile.release]
debug = false
lto = true
opt-level = 'z'
