[package]
name = "iceth"
version = "0.1.0"
description = "Ethereum on IC."
authors = ["John Plevyak <jplevyak@gmail.com>"]
readme = "README.md"
edition = "2021"

# TODO: move all deep-linked crates out and into crates.io
[dependencies]
candid = "0.8"
ic-cdk = "0.7"
ic-cdk-macros = "0.6"
ic-metrics-encoder = "1.1"
ic-canister-log = { git = "https://github.com/dfinity/ic", rev = "d7c7abd7bdb0620635acd1c145e870a7da86a5e3" }
ic-canisters-http-types = { git = "https://github.com/dfinity/ic", rev = "d7c7abd7bdb0620635acd1c145e870a7da86a5e3" }
ic-nervous-system-common = { git = "https://github.com/dfinity/ic", rev = "d7c7abd7bdb0620635acd1c145e870a7da86a5e3" }
json5 = "0.4"
url = "2.3"

[profile.release]
debug = false
lto = true
opt-level = 'z'
